# human_detector

./: .gitignore  .travis.yml  README.md  README_jp.md  before_script.sh  human_detector.rosinstall
fake_target_detector/: CMakeLists.txt  package.xml
fake_target_detector/src/: fake_target_detector.cpp
fake_target_detector/targetfiles/: targetlist.csv
human_detector/: CMakeLists.txt  package.xml
human_model_gazebo/: .launchtest.CMakeLists.txt  .launchtest.package.xml  CMakeLists.txt  README.md  package.xml
human_model_gazebo/launch/: spawn_human_playpen.launch  view_human.launch
human_model_gazebo/test/: spawn_human_playpen.test.xml  view_human.test.xml
human_model_gazebo/urdf/: human.xacro  wheel.xacro
point_cloud_reducer/: .launchtest.package.xml  CMakeLists.txt  package.xml
point_cloud_reducer/launch/: kinect_downsampler.launch
point_cloud_reducer/src/: kinect_downsampler.cpp  kinect_downsampler_node.cpp
point_cloud_reducer/test/: kinect_downsampler.test.xml
target_obejct_detector/: .launchtest.CMakeLists.txt  .launchtest.package.xml  CMakeLists.txt  README.md  package.xml
target_obejct_detector/include/: segment_cluster_creator.hpp  target_object_detector.hpp  target_object_recognizer.h
target_obejct_detector/launch/: target_object_detector.launch
target_obejct_detector/model/: train.csv.scale.out
target_obejct_detector/src/: segment_cluster_creator.cpp  target_object_detector.cpp  target_object_detector_node.cpp  target_object_recognizer.cpp  target_object_recognizer_node.cpp  train_data_create_tool.cpp
target_obejct_detector/src/libsvm/: accuracy.txt  svm-predict  svm-scale  svm-train  test.csv  test_scaled.csv  train.csv
target_obejct_detector/src/libsvm/tools/: train.csv.model  train.csv.range  train.csv.scale
target_obejct_detector/test/: target_object_detector.test.xml
