<?xml version="1.0"?>
<package format="2">
  <name>fake_target_detector</name>
  <version>0.1.0</version>
  <description>The fake_target_detector package</description>

  <maintainer email="k104009y@mail.kyutech.jp">Arita Yuta</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
</package>
