<?xml version="1.0"?>
<package format="2">
  <name>human_detector</name>
  <version>0.1.0</version>
  <description>The metapackage for human_detector.</description>

  <maintainer email="k104009y@mail.kyutech.jp">Arita Yuta</maintainer>
  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/CIR-KIT/human_detector.git</url>
  <url type="bugtracker">https://github.com/CIR-KIT/human_detector/issues</url>
  <author email="cirkit.infomation@gmail.com">CIR-KIT</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>fake_target_detector</exec_depend>
  <exec_depend>human_model_gazebo</exec_depend>
  <exec_depend>point_cloud_reducer</exec_depend>
  <exec_depend>target_obejct_detector</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
