<?xml version="1.0"?>
<package format="2">
  <name>human_model_gazebo</name>
  <version>0.1.0</version>
  <description>The human_model_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="morita@todo.todo">morita</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
