<?xml version="1.0"?>
<package format="2">
  <name>target_object_detector</name>
  <version>0.1.0</version>
  <description>The target_object_detector package</description>

  <maintainer email="k104009y@mail.kyutech.jp">Arita Yuta</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

</package>
