<?xml version="1.0"?>
<package format="2">
  <name>target_object_detector</name>
  <version>0.1.0</version>
  <description>The target_object_detector package</description>

  <maintainer email="k104009y@mail.kyutech.jp">Arita Yuta</maintainer>
  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>

  <license>BSD</license>
  <url type="repository">https://github.com/CIR-KIT/human_detector.git</url>
  <url type="bugtracker">https://github.com/CIR-KIT/human_detector/issues</url>
  <author email="cirkit.infomation@gmail.com">CIR-KIT</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

</package>
